# DeviceDeck

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRODUCT.md  README.md  README_ZH.md  RELEASE_GUIDE.md  devicedeck-prototype.html  devicedeck-wifi-transfer.html  index.html  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: pr-check.yml  release.yml  site.yml
docs/: Tauri命名规范.md  WiFi传输模块测试文档.md  文件传输模块测试文档.md
scripts/: bump-version.mjs  version-sync.mjs
site/: index.html  vite.config.ts
site/src/: App.tsx  main.tsx
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  bundle-config.test.mjs  release-workflow.test.mjs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/linux-x64/: adb  scrcpy  scrcpy-server
src-tauri/binaries/macos-aarch64/: adb  scrcpy
src-tauri/binaries/macos-x64/: scrcpy
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: device.rs  environment.rs  log.rs  mirror.rs  mod.rs  settings.rs  transfer.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: app_state.rs  data_dir.rs  error.rs  log_bus.rs  mod.rs  process_manager.rs  types.rs
src-tauri/src/providers/: mod.rs  provider_trait.rs
src-tauri/src/providers/android/: adb.rs  mod.rs  parser.rs  provider.rs  scrcpy.rs  types.rs
src-tauri/src/providers/ios/: provider.rs
src-tauri/src/repositories/: database.rs  log.rs  mod.rs  session.rs  settings.rs
src-tauri/src/services/: device.rs  environment.rs  mirror.rs  mod.rs  settings.rs  transfer.rs  wifi_transfer.rs
src-tauri/src/sidecar/: binary_resolver.rs  mod.rs  process_command.rs  shell_runner.rs
src/app/: providers.tsx  routes.tsx
src/components/: WelcomeOverlay.tsx
src/context/: AppContext.tsx
src/data/: constants.ts  mock.ts
src/hooks/: useScrollState.ts
src/i18n/: index.ts
src/lib/: error-i18n.ts  format.ts  keyboardShortcuts.test.ts  keyboardShortcuts.ts  presets.ts  tauri.ts  theme.ts  update-types.ts  updater.ts
(+94 files in other folders)
