[package]
name = "devicedeck"
version = "0.1.0"
description = "A modern Android screen mirroring and device management workbench"
authors = ["shenjianZ"]
edition = "2021"

[lib]
name = "devicedeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
