[package]
name = "devicedeck"
version = "0.1.2"
description = "A modern Android screen mirroring and device management workbench"
authors = ["shenjianZ"]
edition = "2021"

[lib]
name = "devicedeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2"
axum = { version = "0.8", features = ["multipart", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }
qrcode = "0.14"
local-ip-address = "0.6"
nanoid = "0.4"
base64 = "0.22"
tar = "0.4"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
